--- a/public/index/index.html
+++ b/public/index/index.html
@@ -14,12 +14,14 @@
         <div class="main-body">
 
             <div class="box" id="box-1">
-                <div>cool</div>
                 <div id="header01">Chat Window</div>
-                <div id="chatbox">
-                    <!-- <div class="messages">Hi</div> -->
-                    <div id="mask"></div>
+
+                <div id="livechat">
+                    <h4>live chat <span  style="color: rgb(72, 255, 0);"> ●</span><span id="livechathead" style="color: rgb(255, 0, 0);"></span></h4>
+                    <div id="chatbox">
+                    </div>
                 </div>
+                
 
                 <div id="votesection">
                     <div id="online">Online Poll <span style="color: rgb(0, 255, 0);"> ●</span></div>
