--- a/public/index/index.html
+++ b/public/index/index.html
@@ -10,6 +10,7 @@
     <div id="outer-box">
         <header>
             <p>Vote Wave</p>
+            <p id="username01">UserName</p>
         </header>
         <div class="main-body">
 
